# motion_complexity_classification_with_zero_shot_vqa

./: .gitignore  README.md  pyproject.toml
results/aloha_sim_insertion_human/: bbox.json  movement_vqa.json  movement_with_entropy.json  object_detection.json  object_detection_original.json
results/movement_vqa/: aloha_sim_insertion_scripted.json  aloha_sim_transfer_cube_scripted.json  conveyor.json  libero_7.json
src/motion_complexity_classification_with_zero_shot_vqa/: load_column.py  load_graph.py  load_proprioception.py  movement_vqa.py  object_detection.py  object_detection_new.py  recipe_providers.py  run_grounding_dino.py  run_sam2.py  visualise_vqa.py  vlm.py
src/motion_complexity_classification_with_zero_shot_vqa/config/: __init__.py  _config.py  _set_seed.py
src/motion_complexity_classification_with_zero_shot_vqa/configs/: __init__.py  _bbox_protocol.py  _config.py  _movement_vqa_protocol.py  _object_detection_protocol.py  _vlm_protocol.py
