[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "motion_complexity_classification_with_zero_shot_vqa"
version = "0.1.0"
description = "motion complexity classification with zero-shot vqa"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "torch",
    "torchvision",
    "static_error_handler",
    "tyro",
    "tqdm",
    "lerobot @ git+https://github.com/huggingface/lerobot.git@577cd10974b84bea1f06b6472eb9e5e74e07f77a",
    "sam-2 @ git+https://github.com/facebookresearch/sam2.git@2b90b9f5ceec907a1c18123530e92e794ad901a4",
    "vqa_pipeline @ git+https://github.com/J-joon/vqa_pipeline@d3e962a226edf87c92f509712b8aa6860ef689ce",
    "h5py",
    "transformers",
    "decord",
    "timm",
    "accelerate",
    "sentencepiece",
    "more-itertools",
    "flash-attn",
]

[tool.hatch.metadata]
allow-direct-references = true
[tool.uv.extra-build-dependencies]
flash-attn = [ "ninja", "torch", "packaging"]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
  { index="pytorch-cu118" },
  ]

torchvision = [
  { index = "pytorch-cu118" },
  ]

[tool.hatch.build.targets.wheel]
packages = ["src/motion_complexity_classification_with_zero_shot_vqa"]

[project.scripts]
1_object_detection = "motion_complexity_classification_with_zero_shot_vqa.object_detection:entrypoint"
1_object_detection_new = "motion_complexity_classification_with_zero_shot_vqa.object_detection_new:entrypoint"
2_grounding_dino = "motion_complexity_classification_with_zero_shot_vqa.run_grounding_dino:entrypoint"
3_sam2 = "motion_complexity_classification_with_zero_shot_vqa.run_sam2:entrypoint"
4_movement_vqa = "motion_complexity_classification_with_zero_shot_vqa.movement_vqa:entrypoint"
load_proprioception = "motion_complexity_classification_with_zero_shot_vqa.load_proprioception:entrypoint"
